# kismet-py

./: .bumpversion.cfg  .dockerignore  README.md  build-docker-images  bumpversion.sh  dev_setup.sh  release  release.sh  setup.cfg  setup.py  setup.sh
avatar/: README.md
docker/: build  cli.dockerfile  discord.dockerfile  docker-compose.yml  kismet.base.dockerfile  kismet.dockerfile  kismet.jupyter.dockerfile  kismet.jupyter.vim.dockerfile  kismet.slack.dockerfile  publish  push  run-kismet.discord  run-kismet.jupyter  run-kismet.jupyter.vim
docker/run/: kismet.discord  kismet.slack
k8s/: build.sh  deploy.sh  push  push.sh  release.sh  setup.sh
k8s/docker/: docker-compose.yml  kismet.base.dockerfile  kismet.discord.dockerfile  kismet.dockerfile  kismet.jupyter.dockerfile  kismet.jupyter.vim.dockerfile  kismet.slack.dockerfile
k8s/docker/run/: kismet.discord  kismet.jupyter  kismet.jupyter.vim  kismet.slack
k8s/helm/: Chart.yaml  values.example.yaml
k8s/helm/templates/: kismet.discord.yaml  kismet.secrets.yaml
k8s/kismet-py/: values.example.yaml  values.yaml
k8s/kismet-py/templates/: kismet.discord.yaml  kismet.secrets.yaml
kismet/: __main__.py  core.py  kismet.lark  parser.py
kismet/chatbot/: discord.py
kismet/kernel/: install.py  kernel.py
kismet/personality/: core.py  responses.py
personality/: README.md
python/: .bumpversion.cfg  README.md  build  build.sh  push  push.sh  pyproject.toml  release.sh  setup.cfg  setup.py  setup.sh
python/src/kismet/: __main__.py  core.py  kismet.lark  parser.py  types.py
python/tests/: test_import.py
(+7 files in other folders)
