[bumpversion]
current_version = 0.0.0
tag = True
commit = True

# YOUR PACKAGE NAME IN PLACE OF 'module_template' HERE:
[bumpversion:file:kismet-py/__init__.py]
[bumpversion:file:version.txt]

[aliases]
test = pytest

[tool:pytest]
addopts = -v -x
python_files = tests/test*.py

[metadata]
# YOUR PACKAGE NAME IN PLACE OF 'module_template' HERE:
name = kismet
version = file: version.txt
author = Mara Kim
author_email = mara@autochthe.net
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
license = NA
long_description = file: README.md
url = https://github.com/autochthe/kismet-py

[options]
packages = find:
include_package_data = True
install_requires =
    lark-parser
setup_requires =
	setuptools>=39.0
	pytest-runner>=2.0
tests_require =
	pytest

# for packages with extension modules:
#zip_safe = False
#[options.package_data]
#* = *.so, *.c
